PROJECT_EKS_Deployment-master/NS_Frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: frontend
  name: frontend
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
