PROJECT_EKS_Deployment-master/Frontend_SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  type: ClusterIP
  selector:
    app: tj-frontend
  ports:
  - name: frontend-svc
    port: 80
    targetPort: 80
