PROJECT_EKS_Deployment-master/Ingress_FE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: eks-frontendns-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: af1fb6771adb84c4d8de85d0542c5a18-1916650486.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
